unpackaged/main/default/objects/Country__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <label>Capital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>