unpackaged/main/default/objects/Country__c/fields/Country_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Area_Code__c</fullName>
    <label>Country Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>