unpackaged/main/default/objects/Country__c/fields/ISO3_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO3_Code__c</fullName>
    <label>ISO3_Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>